
dogm128 ChangeLog


2010-02-13	v1.00	Oliver Kraus <olikraus@gmail.com>
	* First release
2010-07-17	v1.01	Oliver Kraus <olikraus@gmail.com>
	* Fixed compiler warnings
	* Fixed a bug in Breakorino
	* Implemented getStrWidth Function (issue 13)
	* Added new example "Stars.pde" 
	* Added Bitmap Support (example "Walk.pde")
	* Less flash ROM required (functions put into individual files)
	* Fixed bug in drawArc (w0 > w1)
	* Added GraphicsTest.pde
2010-07-18	v1.02	Oliver Kraus <olikraus@gmail.com>
	* removed unrequired file
2010-08-19	v1.03	Oliver Kraus <olikraus@gmail.com>
	* Code update: Use DOG_WIDTH if required
	* Support for DOGM132 and DOGS102
	* New levels 4 & 5 for Breakorino
	* Added SPI abstraction layer (dogmspi.c)
	* More generic delay procedure (dog_delay())
	* clrHLine, xorHLine
2010-xx-xx	v1.04	
	* Renamed dog_delay() --> dog_Delay() 
	* Renamed dog_init() --> dog_Init()
	* Renamed dog_set_inverse() --> dog_SetInvertPixelMode()
	* Renamed dog_set_contrast() --> dog_SetContrast()
	
	